[gd_scene load_steps=9 format=3 uid="uid://r5elhr5ylxtu"]

[ext_resource type="Script" uid="uid://ewywjpx5teem" path="res://scene/main_scene.gd" id="1_jsie2"]
[ext_resource type="Texture2D" uid="uid://canujjt0jwhpo" path="res://asset/Golden.png" id="1_wgwml"]
[ext_resource type="Script" uid="uid://dsdsfkgr44gg" path="res://scene/start_button.gd" id="2_ry1uq"]
[ext_resource type="Texture2D" uid="uid://rf7603w6lh4k" path="res://asset/frame_spech_green.png" id="3_fb1ex"]
[ext_resource type="PackedScene" uid="uid://baimmraemq43d" path="res://scene/pop_ui.tscn" id="4_4wnd8"]
[ext_resource type="PackedScene" uid="uid://dlthy4hh6p4vc" path="res://scene/bottom_panel.tscn" id="5_x5n27"]
[ext_resource type="PackedScene" uid="uid://dyw5lw66sxry2" path="res://scene/portrai_ui.tscn" id="7_qvu5t"]

[sub_resource type="LabelSettings" id="LabelSettings_fb1ex"]
font_size = 30

[node name="MainScene" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_jsie2")

[node name="Bg" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_wgwml")

[node name="StartButton" type="Button" parent="."]
layout_mode = 0
offset_left = 1106.0
offset_top = 372.0
offset_right = 1302.0
offset_bottom = 438.0
text = "开始游戏"
script = ExtResource("2_ry1uq")

[node name="WelcomeUI" type="NinePatchRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_left = 965.0
offset_top = 176.0
offset_right = 1418.0
offset_bottom = 307.0
texture = ExtResource("3_fb1ex")

[node name="WelcomeText" type="Label" parent="WelcomeUI"]
layout_mode = 0
offset_left = 57.0
offset_top = 20.0
offset_right = 409.0
offset_bottom = 113.0
text = "晚上做游戏：
    你好，欢迎你来冒险！"
label_settings = SubResource("LabelSettings_fb1ex")

[node name="PopUI" parent="." instance=ExtResource("4_4wnd8")]
visible = false
offset_left = 612.0
offset_top = 133.0
offset_right = 612.0
offset_bottom = 133.0

[node name="BottomPanel" parent="." instance=ExtResource("5_x5n27")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 960.0
offset_top = 1090.0
offset_right = 960.0
offset_bottom = 1090.0
grow_horizontal = 1
grow_vertical = 1

[node name="PortraiUI" parent="." instance=ExtResource("7_qvu5t")]
visible = false
layout_mode = 1
offset_left = 1200.0
offset_top = 200.0
offset_right = 1200.0
offset_bottom = 200.0
